Basic UI implementing

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Project</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Project</title>
+</head>
+
+<body>
+  <header>
+    <h1>Battleship</h1>
+  </header>
+  <main id="game-container">
+    <div id="game-header">
+      <h2>Player's Board</h2>
+      <button id="new-game">New Game</button>
+      <h2>Opponent's Board</h2>
+    </div>
+    <div id="boards-container">
+      <div id="player-board" class="board">
+        <div class="grid"></div>
+      </div>
+      <div id="opponent-board" class="board">
+        <div class="grid"></div>
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
