Add game loop, basic UI, enemy AI, and game state management.

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
   </header>
   <main id="game-container">
     <div id="game-header">
-      <h2>Player's Board</h2>
+      <h2>You</h2>
       <button id="new-game">New Game</button>
-      <h2>Opponent's Board</h2>
+      <h2>CPU</h2>
     </div>
     <div id="boards-container">
       <div id="player-board" class="board">
